--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -291,13 +291,31 @@ a {
 		font-size: 36px;
 		text-align: center;
 		margin-bottom: 20px;
-		font-family: 'Proxima Nova Light', sans-serif
+		font-family: 'Proxima Nova Light', sans-serif;
+		&-mini {
+			margin-bottom: 20px;
+			font-family: 'Proxima Nova Semiblod', sans-serif;
+			font-size: 24px;
+			letter-spacing: 1px;
+		}
 	}
 	&_padding {
 		padding: 40px 40px 30px 40px ;
 		&-ext {
 			padding: 40px 40px 80px 40px;
 		}
+		&-less {
+			padding: 0 40px 5px;
+		}
+	}
+	&-text {
+		font-family: 'Proxima Nova', sans-serif;
+		line-height: 29px;
+		font-size: 20px;
+		text-align: justify;
+		color: #000000;
+		max-width: 976px;
+		letter-spacing: 0.5px;
 	}
 }
 
@@ -442,6 +460,9 @@ a {
 	margin: 35px 0 50px;
 	outline: none;
 	margin-right: 20px;
+	@include w1366 {
+		width: 300px;
+	}
 	&:last-child {
 		margin-right: 0px;
 	}
@@ -623,6 +644,9 @@ a {
 			align-items: flex-start;
 			overflow: hidden;
 			padding: 27px 20px;
+			@include w1366 {
+				width: 300px;
+			}
 			&:nth-child(1) {
 				background: #E8D8BE;
 			}
@@ -733,7 +757,24 @@ a {
 				background: url(../img/collection-4.png) no-repeat center center;
 				background-size: cover;
 			}
+			&_img {
+				&:nth-child(1) {
+					background: url(../img/collection2-1.png);
+				}
+				&:nth-child(2) {
+					background: url(../img/collection2-2.png);
+				}
+				&:nth-child(3) {
+					background: url(../img/collection2-3.png);
+				}
+				&:nth-child(4) {
+					background: url(../img/collection2-4.png);
+				}
+			}
 		}
+	}
+	&_padding-ext {
+		padding: 20px 40px 60px;
 	}
 }
 
@@ -802,6 +843,9 @@ a {
 					display: flex;
 					align-items: center;
 					margin-bottom: 10px;
+					&_mb {
+						margin-bottom: 20px;
+					}
 					a {
 						margin-right: 20px;
 						color: inherit;
@@ -986,7 +1030,8 @@ a {
 						display: flex;
 						align-items: center;
 						justify-content: center;
-						border-radius: 4px 0px 0px 4px;
+						border-radius: 4px;
+						margin-right: 10px;
 					}
 					&-buy{
 						height: 55px;
@@ -997,7 +1042,7 @@ a {
 						padding: 0 0 0 30px;
 						flex: 1;
 						color: #FFF;
-						border-radius: 0px 4px 4px 0px;
+						border-radius: 4px;
 						letter-spacing: 2px;
 						font-size: 16px;
 					}
@@ -1566,6 +1611,9 @@ a {
 			position: relative;
 			height: 312px;
 			width: 345px;
+			@include w1366 {
+				width: 300px;
+			}
 		}
 	}
 }
@@ -1863,6 +1911,17 @@ a {
 				border-radius: 4px;
 				background: transparent;
 			}
+			&_modified {
+				padding: 70px 0 60px;
+				.card-item-row-item__button {
+					margin-right: 20px;
+					width: 180px;
+					height: 50px;
+					&:last-child {
+						margin-right: 0px;
+					}
+				}
+			}
 		}
 	}
 }
@@ -1904,7 +1963,491 @@ a {
 	height: 1px;
 }
 
+.collection-big {
+	position: relative;
+	img {
+		width: 100%;
+	}
+	&-list {
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		z-index: 2;
+		&__item {
+			width: 138px;
+			height: 33px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background: rgba(0, 0, 0, 0.5);
+			border-radius: 4px 0px 0px 4px;
+			color: #FFF;
+			font-size: 18px;
+			font-family: 'Proxima Nova Light', sans-serif;
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+	&__text-bottom {
+		position: absolute;
+		bottom: 60px;
+		left: 50%;
+		transform: translateX(-50%);
+		color: #FFF;
+		font-size: 48px;
+	}
+}
 
+.text-big-white {
+	font-family: 'Proxima Nova Extrabold';
+	font-style: normal;
+	font-weight: 900;
+}
+
+.where-buy-big {
+	display: flex;
+	align-items: stretch;
+	&-img {
+		margin-right: 20px;
+		&__item {
+			display: none;
+			border-radius: 5px;
+			overflow: hidden;
+			width: 325px;
+			height: 321px;
+			&.active {
+				display: block;
+			}
+			img {
+				width: 325px;
+				height: 321px;
+			}
+		}
+	}
+	&-info {
+		display: flex;
+		flex-direction: column;
+		// justify-content: space-between;
+		align-items: stretch;
+		&__item {
+			margin-bottom: 10px;
+			line-height: 24px;
+			color: #000;
+			font-size: 24px;
+			font-family: 'Proxima Nova Light', sans-serif;
+			a {
+				color: #000;
+			}
+		}
+		&__head {
+			margin-bottom: 20px;
+			font-size: 36px;
+			color: $red;
+		}
+		&-gallery {
+			display: flex;
+			align-items: center;
+			margin-top: auto;
+			&__item {
+				margin-right: 10px;
+				border-radius: 5px;
+				overflow: hidden;
+				width: 51px;
+				height: 51px;
+				cursor: pointer;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background: #FFF;
+			}
+		}
+	}
+}
+
+.where-buy-small {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	&-item {
+		display: flex;
+		align-items: stretch;
+		cursor: pointer;
+		flex: 0 1 400px;
+		height: 112px;
+		&:nth-child(1) {
+			margin-bottom: 20px;
+		}
+		&__img {
+			width: 113px;
+			height: 112px;
+			border-radius: 5px;
+			margin-right: 20px;
+			overflow: hidden;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background: #FFF;
+			flex: 0 1 113px;
+			img {
+				width: 100%;
+			}
+		}
+		&-info {
+			display: flex;
+			flex-direction: column;
+			align-items: stretch;
+			flex: 1;
+			&__item {
+				&_head {
+					font-size: 18px;
+					margin-bottom: 15px;
+				}
+				&_address {
+					font-size: 14px;
+					font-family: 'Proxima Nova', sans-serif;
+					margin-bottom: 10px;
+				}
+				&_text {
+					margin-top: auto;
+					font-size: 14px;
+				}
+			}
+		}
+	}
+}
+
+.contacts {
+	padding: 25px 40px 0px;
+	&-img-big {
+		width: 100%;
+	}
+	&-info {
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		&-column {
+			display: flex;
+			flex-direction: column;
+			flex: 1;
+			&-row {
+				margin-bottom: 35px;
+				&_head {
+					font-family: 'Proxima Nova', sans-serif;
+					line-height: normal;
+					font-size: 24px;
+					margin-bottom: 15px;
+				}
+				&_text {
+					font-family: 'Proxima Nova Light', sans-serif;
+					line-height: normal;
+					font-size: 24px;
+					a {
+						color: #000;
+					}
+				}
+			}
+		}
+	}
+	&-form {
+		padding: 5px 0 50px;
+		width: 570px;
+		&-row {
+			display: flex;
+			margin-bottom: 25px;
+			justify-content: space-between;
+			&_full-width {
+				display: block;
+			}
+		}
+		&-input {
+			width: 270px;
+			height: 42px;
+			padding: 15px;
+			margin-left: 0px;
+			&::placeholder {
+				color: #B8BFD3;
+			}
+			&-label {
+				font-family: 'Proxima Nova', sans-serif;
+				line-height: 15px;
+				font-size: 14px;
+				letter-spacing: 1.09091px;
+				color: #757575;
+				margin-bottom: 10px;
+			}
+		}
+		&-btn {
+			border: none;
+			cursor: pointer;
+			letter-spacing: 1px;
+		}
+		&-textarea {
+			width: 100%;
+			&::placeholder {
+				color: #B8BFD3;
+			}
+		}
+	}
+}
+
+
+.discount-head {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 30px;
+	&-background {
+		background: url(../img/discount-head.png) no-repeat center center;
+		background-size: cover;
+		&_2 {
+			background: url(../img/discount-head2.png) no-repeat center center;
+		}
+	}
+	&-text {
+		font-size: 96px;
+		color: #000;
+	    background: #fff;
+	    mix-blend-mode: lighten;
+	    font-family: 'Proxima Nova Extrabold', sans-serif;
+	}
+}
+
+.discount-card {
+	display: flex;
+	flex-direction: column;
+	width: 440px;
+	flex: 0 1 440px;
+	margin-right: 20px;
+	text-align: center;
+	align-items: center;
+	&:last-child {
+		margin-right: 0px;
+	}
+	&-wrapper {
+		display: flex;
+		align-items: flex-start;
+		justify-content: center;
+	}
+	&-img {
+		height: 223px;
+		margin-bottom: 30px;
+		img {
+			width: 100%;
+		}
+	}
+	&-date {
+		margin-bottom: 25px;
+		font-size: 14px;
+	}
+	&-text {
+		font-size: 24px;
+		margin-bottom: 25px;
+		font-family: 'Proxima Nova Semibold', sans-serif;
+		&_small {
+			font-size: 18px;
+			max-width: 300px;
+			font-family: 'Proxima Nova', sans-serif;
+		}
+	}
+	&-btn {
+		width: 210px;
+		height: 50px;
+		&-wrapper {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
+}
+
+.principels-block {
+	&-head {
+		font-size: 24px;
+		font-family: 'Proxima Nova', sans-serif;
+		margin-bottom: 20px;
+	}
+	&-text {
+		font-family: 'Proxima Nova Light';
+		line-height: 41px;
+		font-size: 20px;
+		margin-bottom: 20px;
+	}
+}
+
+.person {
+	padding: 0px 40px 50px;
+	&-card {
+		display: flex;
+		align-items: stretch;
+		&-img {
+			margin-right: 20px;
+			width: 210px;
+			height: 245px;
+			img {
+				width: 100%;
+			}
+		}
+		&-info {
+			max-width: 300px;
+			&-item {
+			    font-family: 'Proxima Nova Light';
+			    font-size: 20px;
+			    margin-bottom: 20px;
+			    a {
+			    	color: #000;
+			    }
+			}
+		}
+	}
+}
+
+.about-block {
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	&-text {
+		flex: 1;
+		margin-right: 20px;
+		&__head {
+			font-family: 'Proxima Nova Semibold', sans-serif;
+			font-size: 24px;
+			margin-bottom: 20px;
+		}
+		&__main {
+			font-family: 'Proxima Nova Light', sans-serif;
+			line-height: 41px;
+			font-size: 20px;
+		}
+	}
+	&-img {
+		flex: 0 1 555px;
+		margin-top: 60px;
+		img {
+			width: 100%;
+		}
+	}
+	&_reverse {
+		flex-direction: row-reverse;
+		.about-block-text {
+			margin-right: 0px;
+			margin-left: 20px;
+		}
+	}
+}
+
+.about {
+	padding: 0px 40px 70px;
+}
+
+.about-slider {
+	&-wrapper {
+		position: relative;
+		width: 920px;
+		margin: 0 auto;
+	}
+	&-item {
+		width: 286px;
+		margin-right: 30px;
+		outline: none;
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
+	&__arrow-next, &__arrow-prev {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		opacity: 0.5;
+		transition: 0.5s;
+		cursor: pointer;
+		&:hover {
+			opacity: 1;
+		}
+	}
+	&__arrow-next {
+		right: -40px;
+	}
+	&__arrow-prev {
+		left: -40px;
+	}
+}
+
+
+.news-item-first-screen {
+	position: relative;
+	img {
+		width: 100%;
+	}
+	&__text {
+		position: absolute;
+		bottom: 40px;
+		font-family: 'Proxima Nova Extrabold';
+		line-height: normal;
+		font-size: 36px;
+		text-align: center;
+		color: #FFF;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+	&-wrapper {
+		padding: 0px 40px;
+	}
+}
+
+.news-item-description {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 75px;
+	border-bottom: 1px solid #DEDEDE;
+	&-item {
+		display: flex;
+		align-items: center;
+		color: #777777;
+		font-size: 18px;
+		&:nth-child(2) {
+			svg {
+				margin-right: 10px;
+			}
+		}
+		&:nth-child(3) {
+			svg {
+				margin-left: 10px;
+			}
+		}
+	}
+}
+
+.news-item-main {
+	max-width: 1130px;
+	margin: 0 auto;
+}
+
+.news-item-img-block {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding: 20px 0;
+	&__img {
+		width: 540px;
+		border-radius: 5px;
+		overflow: hidden;
+		margin-bottom: 20px;
+		img {
+			width: 100%;
+		}
+	}
+	&__description {
+		font-family: Proxima Nova;
+		font-size: 18px;
+		text-align: center;
+		color: #777777;
+		font-style: italic;
+	}
+}
 
 
 
